--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -25,6 +25,9 @@
     transition: 0.2s ease;
 }
 .card__discount{
+    cursor: pointer;
+}
+.card__discount{
     color: white;
     position: absolute;
     bottom: 15px;
@@ -43,4 +46,23 @@
 .card__discount > h1 > span{
     font-size: 35px;
     color: white;
+}
+/* .card-card__item{
+    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    padding: 2rem;
+} */
+
+@media screen and (max-width: 600px) {
+    .card{
+        margin-bottom: 0.2rem;
+        max-width: 180px;
+        height: 320px;
+        
+    }
+    .card img{
+        height: 180px;
+        border-radius: 1rem;
+        
+    }
+
 }
